@@ -34,19 +34,20 @@
          (>= emacs-major-version 19))))
 
 (unless-broken ccl-usable
-  (require 'ccl)
   (require 'advice)
 
   (if (featurep 'mule)
-      (if (featurep 'xemacs)
-          (if (>= emacs-major-version 21)
-              ;; for XEmacs 21 with mule
-              (require 'pccl-20))
-        (if (>= emacs-major-version 20)
-            ;; for Emacs 20
-            (require 'pccl-20)
-          ;; for Mule 2.*
-          (require 'pccl-om))))
+      (progn
+	(require 'ccl)
+	(if (featurep 'xemacs)
+            (if (>= emacs-major-version 21)
+                ;; for XEmacs 21 with mule
+                (require 'pccl-20))
+          (if (>= emacs-major-version 20)
+              ;; for Emacs 20
+              (require 'pccl-20)
+            ;; for Mule 2.*
+            (require 'pccl-om)))))
 
   (static-if (or (featurep 'xemacs) (< emacs-major-version 21))
     (defadvice define-ccl-program
